[gd_scene load_steps=21 format=3 uid="uid://d1kw2mj4yem4r"]

[ext_resource type="Script" uid="uid://ct82g7t8pakfh" path="res://player/player_TPS.gd" id="1_q0arx"]
[ext_resource type="AudioStream" uid="uid://b4qjh6v36ldc2" path="res://resources/sounds/freesound/38872__swuing__footstep-carpet.wav" id="2_2xlby"]
[ext_resource type="AudioStream" uid="uid://bttcro2bo0tfh" path="res://resources/sounds/bad_stuff_feedback_1.ogg" id="2_6yxdw"]
[ext_resource type="Texture2D" uid="uid://cborqslv0ubl3" path="res://resources/misc_textures/d_shadow_1.png" id="3_l17dr"]
[ext_resource type="Texture2D" uid="uid://dusknypvsy7t7" path="res://resources/misc_textures/test_character_1-Sheet.png" id="5_icelm"]
[ext_resource type="Texture2D" uid="uid://64wpe0awrmp" path="res://resources/misc_textures/rain_Drop.png" id="6_1w4ci"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x6jku"]
radius = 0.4

[sub_resource type="SeparationRayShape3D" id="SeparationRayShape3D_flttd"]
length = 0.25

[sub_resource type="AtlasTexture" id="AtlasTexture_rmo6f"]
atlas = ExtResource("5_icelm")
region = Rect2(0, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwb2x"]
atlas = ExtResource("5_icelm")
region = Rect2(512, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpp1w"]
atlas = ExtResource("5_icelm")
region = Rect2(1024, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_xojw0"]
atlas = ExtResource("5_icelm")
region = Rect2(1536, 0, 512, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_di5xn"]
atlas = ExtResource("5_icelm")
region = Rect2(2048, 0, 512, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_epedq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmo6f")
}],
"loop": true,
"name": &"stand",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwb2x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpp1w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xojw0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di5xn")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="BoxShape3D" id="BoxShape3D_iiobo"]
size = Vector3(0.5, 2, 0.5)

[sub_resource type="Gradient" id="Gradient_6yxdw"]
offsets = PackedFloat32Array(0, 0.178683, 0.836991, 1)
colors = PackedColorArray(0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_1w4ci"]
gradient = SubResource("Gradient_6yxdw")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_6yxdw"]
lifetime_randomness = 0.5
emission_shape = 3
emission_box_extents = Vector3(15, 4, 15)
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_max = 0.1
gravity = Vector3(0, 0, 0)
scale_min = 0.1
scale_max = 0.2
color_ramp = SubResource("GradientTexture1D_1w4ci")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6yxdw"]
transparency = 1
diffuse_mode = 3
specular_mode = 2
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("6_1w4ci")
metallic_specular = 0.0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_1w4ci"]
material = SubResource("StandardMaterial3D_6yxdw")
size = Vector2(0.2, 0.2)

[node name="player_TPS" type="CharacterBody3D"]
collision_layer = 9
script = ExtResource("1_q0arx")

[node name="HUD" type="Node3D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="HUD"]

[node name="Control" type="Control" parent="HUD/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="interact_text" type="RichTextLabel" parent="HUD/CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -159.0
offset_top = -113.0
offset_right = 159.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/normal_font_size = 48
bbcode_enabled = true
text = "[center]interact"

[node name="interact_cooldown" type="Timer" parent="HUD"]
wait_time = 1.25
one_shot = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_x6jku")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="interact_cast" type="RayCast3D" parent="Head"]
target_position = Vector3(0, 0, -1)
collision_mask = 2
hit_from_inside = true
collide_with_areas = true
debug_shape_custom_color = Color(0, 0, 1, 1)

[node name="behind_player" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4)

[node name="left" type="Node3D" parent="Head/behind_player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)

[node name="right" type="Node3D" parent="Head/behind_player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
far = 140.0

[node name="audio_players" type="Node3D" parent="."]

[node name="bad_stuff_noise" type="AudioStreamPlayer" parent="audio_players"]
stream = ExtResource("2_6yxdw")
volume_db = -80.0
autoplay = true

[node name="footsteps" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_2xlby")
volume_db = -10.0

[node name="seperation_raycast" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.75, -0.5)
shape = SubResource("SeparationRayShape3D_flttd")

[node name="Drop_Shadow" type="Decal" parent="."]
top_level = true
visible = false
size = Vector3(3, 3, 3)
texture_albedo = ExtResource("3_l17dr")
modulate = Color(0, 0, 0, 1)

[node name="D_Shad_Check" type="RayCast3D" parent="."]
target_position = Vector3(0, -10, 0)

[node name="step_audio_detect" type="RayCast3D" parent="."]
collision_mask = 128
collide_with_areas = true
collide_with_bodies = false

[node name="trigger_collider_check" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_mask = 4
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0.231932, 0)
visible = false
shaded = true
sprite_frames = SubResource("SpriteFrames_epedq")
animation = &"walk"
frame = 3
frame_progress = 0.037809

[node name="AudioListener3D" type="AudioListener3D" parent="."]
current = true

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_iiobo")

[node name="marine_snow" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -7)
amount = 500
lifetime = 20.0
preprocess = 20.0
visibility_aabb = AABB(-8, -4, -8, 16, 8, 16)
process_material = SubResource("ParticleProcessMaterial_6yxdw")
draw_pass_1 = SubResource("QuadMesh_1w4ci")

[connection signal="timeout" from="HUD/interact_cooldown" to="." method="_on_interact_cooldown_timeout"]
